# cleanos-ai

./: .gitignore  AGENT_QUICKREF.md  AGENT_SYSTEM_PROMPT.md  CHANGELOG.md  PROJECT_STATUS.json  PROJECT_SUMMARY.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.cleo/: .context-state.json  .git-checkpoint-state  .sequence  config.json  project-info.json  sessions.json  todo-archive.json  todo-log.json  todo.json
.cleo/.cache/: graph.checksum.txt  graph.forward.json  graph.metadata.json  graph.reverse.json
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  PRD.md  TECHNICAL_SPEC.md
scripts/: setup-signing.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  ai_prompts.rs  caches.rs  cleanup_commands.rs  commands.rs  credentials.rs  database.rs  docker.rs  filesystem.rs  lib.rs  main.rs  models.rs  schema.sql  system.rs  updater.rs
src/components/ai-chat/: AiChat.tsx
src/components/dashboard/: Dashboard.tsx  StatCard.tsx  StorageChart.tsx
src/components/files/: FileExplorer.tsx  FileRow.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/settings/: ProviderConfig.tsx  SettingsPage.tsx  ThemeToggle.tsx  UpdateChecker.tsx
src/components/system/: BrowserCachePanel.tsx  CachePanel.tsx  DockerPanel.tsx  LogPanel.tsx  SystemCleanup.tsx
src/hooks/: useSystemInfo.ts  useTheme.ts  useUpdateChecker.ts
src/lib/: utils.test.ts  utils.ts
src/services/: tauri-commands.ts
src/stores/: app-store.ts
src/types/: index.ts
(+7 files in other folders)
