[package]
name = "cleanos-ai"
version = "2026.2.0"
description = "AI-powered system cleanup tool for Linux"
authors = ["CleanOS AI Team"]
edition = "2021"

[lib]
name = "cleanos_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
walkdir = "2"
rayon = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
keyring = { version = "3", features = ["linux-native"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bytesize = "1"
tauri-plugin-updater = "2"
